103.多个自定义授权处理程序

--- a/StudentManagement/StudentManagement/Views/Admin/EditUser.cshtml
+++ b/StudentManagement/StudentManagement/Views/Admin/EditUser.cshtml
@@ -68,7 +68,13 @@
         </div>
         <div class="card-footer">
 
-            <a href="#" class="btn btn-primary">管理角色</a>
+            <a asp-controller="Admin"
+               asp-action="ManageUserRoles"
+               asp-route-userId="@Model.Id"
+               style="width:auto"
+               class="btn btn-primary">
+                管理角色
+            </a>
         </div>
     </div>
 
@@ -82,7 +88,7 @@
             {
                 foreach (var claim in Model.Claims)
                 {
-                    <h5 class="card-title">@claim</h5>
+                    <h5 class="card-title">@claim.Type : @claim.Value</h5>
 
                 }
             }
