--- a/StudentManagement.RazorPage/Pages/_ViewImports.cshtml
+++ b/StudentManagement.RazorPage/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 @using StudentManagement.RazorPage
+@using StudentManagement.RazorPage.Models
+
 @namespace StudentManagement.RazorPage.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
