--- a/StudentManagement.RazorPage/Pages/Students/Index.cshtml
+++ b/StudentManagement.RazorPage/Pages/Students/Index.cshtml
@@ -27,7 +27,7 @@
 
             <div class="card-footer text-center">
                 <a asp-page="/Students/Details" asp-route-ID="@student.Id" class="btn btn-primary m-1">详情</a>
-                <a  asp-page="/Students/Edit" class="btn btn-primary m-1">编辑</a>
+                <a  asp-page="/Students/Edit"  asp-route-ID="@student.Id" class="btn btn-primary m-1">编辑</a>
                 <a href="#" class="btn btn-danger m-1">删除</a>
             </div>
         </div>
