--- a/RazorPages/StudentManagement.RazorPage/Pages/Students/Edit.cshtml
+++ b/RazorPages/StudentManagement.RazorPage/Pages/Students/Edit.cshtml
@@ -2,8 +2,31 @@
 @model StudentManagement.RazorPage.Pages.Students.EditModel
 @{
     ViewData["Title"] = "编辑";
-
+    // 如果学生没有照片信息，就默认给他一张空照片
+    var photoPath = "~/images/" + (Model.Student.PhotoPath ?? "noimage.png");
 }
+
+<h1>消息通知配置开关</h1>
+
+<form method="post" asp-page-handler="UpdateNotificationPreferences">
+    <div class="form-check">
+        <input asp-for="Notify" class="form-check-input" />
+        <label asp-for="Notify" class="form-check-label">
+       允许接收消息通知信息
+        </label>
+    </div>
+    <button type="submit" class="btn btn-primary">
+        更新消息通知
+    </button>
+    @if (!string.IsNullOrEmpty(Model.Message))
+    {
+        <div class="alert alert-primary">
+            @Model.Message
+        </div>
+    }
+</form>
+
+<hr />
 
 <h1>编辑学生</h1>
 
@@ -37,9 +60,38 @@
     </div>
 
     <div class="form-group row">
+        <label asp-for="Photo" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10">
+            <div class="custom-file">
+                @*Photo属性类型是IFormFile，ASP. NET Core会根据这个属性自动创建一个FileUpload控件 *@
+                @* 有关更具体的信息在《深入浅出ASP.NET Core》那本书有介绍 *@
+                <input asp-for="Photo" class="custom-file-input form-control">
+                <label class="custom-file-label">Click here to change photo</label>
+            </div>
+        </div>
+    </div>
+
+    @*显示有照片的学生信息*@
+    <div class="form-group row col-sm-4 offset-4">
+        <img class="imageThumbnail" src="@photoPath" asp-append-version="true" />
+    </div>
+
+    <div class="form-group row">
         <div class="col-sm-10">
             <button type="submit" class="btn btn-primary">更新</button>
             <a asp-page="/Student/Index" class="btn btn-primary">取消</a>
         </div>
     </div>
+
+    @section Scripts {
+        <script>
+            $(document).ready(function () {
+                $('.custom-file-input').on("change", function () {
+                    var fileName = $(this).val().split("\\").pop();
+                    $(this).next('.custom-file-label').html(fileName);
+                });
+            });
+        </script>
+    }
+
 </form>
