114章内容完成。

--- a/StudentManagement/StudentManagement/Views/Account/Login.cshtml
+++ b/StudentManagement/StudentManagement/Views/Account/Login.cshtml
@@ -39,6 +39,12 @@
 
             <button type="submit" class="btn btn-primary"> 登录</button>
 
+            <div>
+                <a asp-action="ActivateUserEmail">激活邮箱</a>
+
+                <a asp-action="ForgotPassword">找回密码</a>
+            </div>
+
         </form>
 
 
