修改文字描述错误。

--- a/RazorPages/StudentManagement.RazorPage/Pages/Students/Edit.cshtml
+++ b/RazorPages/StudentManagement.RazorPage/Pages/Students/Edit.cshtml
@@ -66,7 +66,7 @@
                 @*Photo属性类型是IFormFile，ASP. NET Core会根据这个属性自动创建一个FileUpload控件 *@
                 @* 有关更具体的信息在《深入浅出ASP.NET Core》那本书有介绍 *@
                 <input asp-for="Photo" class="custom-file-input form-control">
-                <label class="custom-file-label">Click here to change photo</label>
+                <label class="custom-file-label">更换图片</label>
             </div>
         </div>
     </div>
