完成分部视图页面。

--- a/RazorPages/StudentManagement.RazorPage/Pages/Shared/_Layout.cshtml
+++ b/RazorPages/StudentManagement.RazorPage/Pages/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
-    <partial name="_ValidationScriptsPartial" />
+    @*<partial name="_ValidationScriptsPartial" />*@
     @*@Html.PartialAsync("_ValidationScriptsPartial")*@
 
     
