--- a/RazorPages/StudentManagement.RazorPage/Pages/Students/Index.cshtml
+++ b/RazorPages/StudentManagement.RazorPage/Pages/Students/Index.cshtml
@@ -1,8 +1,11 @@
+@page   "/"
 
-@page  "/Students"
 @model StudentManagement.RazorPage.Pages.Students.IndexModel
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "学生列表";
+    //使用ViewData传递true来告诉分部视图显示查看编辑和删除按钮
+    ViewData["ShowButtons"] = true;
+
 }
 
 <style>
@@ -16,20 +19,8 @@
 <div class="card-deck">
     @foreach (var student in Model.Students)
     {
-        var photoPath = "~/images/" + (student.PhotoPath ?? "noimage.png");
-        <div class="card m-3" style="min-width: 18rem; max-width:30.5%;">
-            <div class="card-header">
-                <h3>@student.Name</h3>
-            </div>
 
-            <img class="card-img-top imageThumbnail" src="@photoPath"
-                 asp-append-version="true" />
+        <partial name="_DisplayStudentPartial" model="student" view-data="ViewData" />
 
-            <div class="card-footer text-center">
-                <a asp-page="/Students/Details" asp-route-ID="@student.Id" class="btn btn-primary m-1">详情</a>
-                <a  asp-page="/Students/Edit"  asp-route-ID="@student.Id" class="btn btn-primary m-1">编辑</a>
-                <a href="#" class="btn btn-danger m-1">删除</a>
-            </div>
-        </div>
     }
 </div>
