--- a/RazorPages/StudentManagement.RazorPage/Pages/Privacy.cshtml
+++ b/RazorPages/StudentManagement.RazorPage/Pages/Privacy.cshtml
@@ -1,8 +1,9 @@
-﻿@page
+@page
 @model PrivacyModel
 @{
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
+@await Component.InvokeAsync("HeadCount", null)
 
 <p>Use this page to detail your site's privacy policy.</p>
