完成efcore的存储过程操作。

--- a/RazorPages/StudentManagement.RazorPage/Pages/Index.cshtml
+++ b/RazorPages/StudentManagement.RazorPage/Pages/Index.cshtml
@@ -11,5 +11,9 @@
 
     @await Component.InvokeAsync("HeadCount")
 
+    <vc:head-count class-name="null"></vc:head-count>
+
+
+ 
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
