--- a/RazorPages/StudentManagement.RazorPage/Pages/_ViewImports.cshtml
+++ b/RazorPages/StudentManagement.RazorPage/Pages/_ViewImports.cshtml
@@ -3,3 +3,6 @@
 
 @namespace StudentManagement.RazorPage.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, StudentManagement.RazorPage
+
+@*//StudentManagement.RazorPage，是包含要注册的视图组件的程序集(DLL) *(星号)，指定所有的视图组件。*@
